Fixed jumping layout when switching between question/answer.

--- a/Memosport/wwwroot/less/main.less
+++ b/Memosport/wwwroot/less/main.less
@@ -1798,25 +1798,13 @@ MajorSystem edit.ctp
     z-index: 3;
 }
 
-.ict-question-container {
+.ict-question-container,
+.ict-result-container {
     background-color: white;
     padding: @GlobalMargin / 3;
     text-align: center;
     position: relative;
     z-index: 1;
-    border: solid 1px #ccc;
-}
-
-
-.ict-result-container {
-    background-color: white;
-    height: 160px;
-    line-height: 160px;
-    font-size: 36px;
-    width: 98%;
-    padding: 1%;
-    text-align: center;
-    position: relative;
     border: solid 1px #ccc;
 }
 
